# swagger.json
@@ -12,70 +12,22 @@
     "https"
   ],
   "paths": {
-    "/": {
+    "/login": {
       "get": {
-        "tags": [
-          "Rocks"
-        ],
-        "description": "Gets all rocks",
-        "produces": [
-          "application/json"
-        ],
+        "description": "",
         "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
+          "default": {
+            "description": ""
           }
         }
-      },
-      "post": {
-        "tags": [
-          "Rocks"
-        ],
-        "description": "Adds individual rock from database with 7 notabilities",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "color": {
-                  "example": "any"
-                },
-                "location": {
-                  "example": "any"
-                },
-                "name": {
-                  "example": "any"
-                },
-                "personality": {
-                  "example": "any"
-                },
-                "instrument": {
-                  "example": "any"
-                },
-                "size": {
-                  "example": "any"
-                },
-                "job": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
+      }
+    },
+    "/logout": {
+      "get": {
+        "description": "",
         "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "412": {
-            "description": "Precondition Failed"
-          },
-          "500": {
-            "description": "Internal Server Error"
+          "default": {
+            "description": ""
           }
         }
       }
@@ -138,6 +90,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "412": {
             "description": "Precondition Failed"
@@ -218,6 +173,9 @@
           "204": {
             "description": "No Content"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "412": {
             "description": "Precondition Failed"
           },
@@ -242,6 +200,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -400,6 +361,77 @@
         }
       }
     },
+    "/": {
+      "get": {
+        "tags": [
+          "Rocks"
+        ],
+        "description": "Gets all rocks",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Rocks"
+        ],
+        "description": "Adds individual rock from database with 7 notabilities",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "color": {
+                  "example": "any"
+                },
+                "location": {
+                  "example": "any"
+                },
+                "name": {
+                  "example": "any"
+                },
+                "personality": {
+                  "example": "any"
+                },
+                "instrument": {
+                  "example": "any"
+                },
+                "size": {
+                  "example": "any"
+                },
+                "job": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/{id}": {
       "get": {
         "tags": [
@@ -470,6 +502,9 @@
           "204": {
             "description": "No Content"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "412": {
             "description": "Precondition Failed"
           },
@@ -494,6 +529,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
